--- a/client-side/src/css/Login.css
+++ b/client-side/src/css/Login.css
@@ -1,10 +1,78 @@
-.gradient-custom {
-    /* fallback for old browsers */
-    background: #6a11cb;
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-    }
+
+
+body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #212529, #2575fc); /* Cooler gradient background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-size: cover;
+  }
+  
+  .webTitle {
+    text-align: center;
+    color: #fff; /* Change to white for better contrast */
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .logInBox {
+    background-color: currentcolor;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 50px;
+    max-width: 500px; /* Increase max width */
+    width: 100%;
+    text-align: center;
+  }
+  
+  .logIn {
+    font-size: 2rem; /* Increase font size */
+    color: #333;
+    margin-bottom: 30px;
+  }
+  
+  input[type="text"],
+  input[type="password"] {
+    width: 100%;
+    padding: 12px; /* Increase padding */
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 1rem;
+    direction: rtl;
+  }
+  
+  .submitBtn {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .logInBtn {
+    background-color: cornflowerblue; 
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+  
+  .logInBtn:hover {
+    background-color: #feb47b; /* Slightly lighter shade for hover */
+  }
+  
+  #logInBtn {
+    flex-grow: 1;
+    margin-right: 10px;
+  }
+  
+  button.logInBtn:nth-child(2) {
+    margin-left: 10px;
+  }
+  
+  
