display images works

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -11,6 +11,7 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -18,6 +19,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.images{
+  size: 20%;
+  height: 200px;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
