--- a/client-side/src/css/Login.css
+++ b/client-side/src/css/Login.css
@@ -92,3 +92,22 @@ body {
 .text-center {
   text-align: center;
 }
+.login-form h2 {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+}
+
+.login-form h2::after {
+  content: '';
+  width: 50%;
+  height: 3px;
+  background: linear-gradient(45deg, rgba(255, 111, 97, 0.8), rgba(222, 67, 19, 0.8));
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+}
