--- a/client-side/src/css/Login.css
+++ b/client-side/src/css/Login.css
@@ -27,7 +27,7 @@ body {
 }
 
 .login-form {
-  background: rgba(255, 255, 255, 0.01);
+  background: radial-gradient(black, transparent);
   padding: 30px;
   border-radius: 10px;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
