--- a/client-side/src/css/Register.css
+++ b/client-side/src/css/Register.css
@@ -82,7 +82,7 @@ body {
 }
 
 .register-form {
-    /* background: rgba(255, 255, 255, 0.01); */
+  background: radial-gradient(black, transparent);
     padding: 30px;
     border-radius: 10px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
